--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
