--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.1"
   },
