--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
